# agent-with-cardputer-adv

./: .gitignore  AGENT.md  CMakeLists.txt  GOAL.md  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
docs/: ai-quickstart.md  cardputer_agora_whip_codex_task.md  manual-setup.md
main/: CMakeLists.txt  idf_component.yml
src/: CMakeLists.txt  app_atomic_compat.c  app_audio_adv_codec.c  app_audio_adv_codec.h  app_audio_controller.c  app_audio_controller.h  app_audio_fake.c  app_audio_fake.h  app_audio_i2s.c  app_audio_i2s.h  app_audio_playback.c  app_audio_playback.h  app_codec_g711.c  app_codec_g711.h  app_codec_g722.c  app_codec_g722.h  app_config.h  app_config.local.example.h  app_display.c  app_display.h  app_https.c  app_https.h  app_protocol.c  app_protocol.h  app_rtsa.c  app_rtsa.h  app_rtsa_compat.c  app_session.c  app_session.h  app_time_sync.c  app_time_sync.h  app_vendor_g722.h  app_vendor_g722_common.h  app_vendor_g722_decode.c  app_vendor_g722_encode.c  app_webrtc.c  app_webrtc.h  app_webrtc_probe.c  app_webrtc_probe.h  app_whip.c  (+4 more)
